# clivon

./: .gitignore  CHANGELOG.md  README.md  build_bridge.bat  convert_icon.cjs  convert_icon_sharp.cjs  generate_ico_robust.cjs  generate_ico_safe.cjs  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
app/: auth-preload.js  auth_bridge.py  clivon.json  clivon_core.js  main.js  package-lock.json  package.json  preload.js  requirements.txt  titlebar.js
app/extensions/uBOL/: log.txt
app/extensions/uBOL/js/: mode-manager.js
docs/: WIKI_HOME.md
electron/: .gitignore  ad-skipper.js  ai-agent.js  main.js  package.json  titlebar.css
legacy_cpp/: CMakeLists.txt
legacy_cpp/src/: main.cc  quantum_ad_block.h  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h
legacy_cpp/src/extension/: content.js
legacy_cpp/src/extension/Youtube-AdBlocker/: README.md  manifest.json
src/: App.tsx  client_protection.h  ghost_bar.cc  ghost_bar.h  host_window.cc  host_window.h  index.css  network_optimizer.h  window_helper.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: adblock.js  clivon_core.js  focus_mode.js  header_mods.js  lib.rs  main.rs  notifications.js
src/components/: BrowserFrame.tsx  FloatingDock.tsx
src/extension/: manifest.json
src/hooks/: useShortcuts.ts
